<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraintLayout_weather_photo"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".presentation.create_weather_photo.PhotoWeatherFragment">


	<ImageView
		android:id="@+id/imageView_weather_photo_background"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/black"
		android:contentDescription="@string/content_description_capture_weather_photo"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/fab_share_image"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		app:backgroundTint="@color/yellow"
		android:src="@drawable/baseline_share_24"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:contentDescription="@string/share_content_description" />

	<androidx.constraintlayout.widget.Group
		android:id="@+id/group_weather_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"
		app:constraint_referenced_ids="imageView_status_icon, textView_status, textView_status_description, textView_feels_like_temperature_label, textView_feels_like_temperature, textView_temperature_label, textView_temperature"
		tools:visibility="visible" />

	<View
		android:id="@+id/view_scrim"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:background="@color/scrim_bg"
		app:layout_constraintBottom_toBottomOf="@+id/guideline_vertical_scrim"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/imageView_status_icon"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:contentDescription="@string/weather_status_icon_description"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:src="@drawable/img_thunderstorm" />

	<TextView
		android:id="@+id/textView_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:textColor="@color/yellow"
		app:layout_constraintBottom_toTopOf="@+id/textView_status_description"
		app:layout_constraintStart_toEndOf="@id/imageView_status_icon"
		app:layout_constraintTop_toTopOf="@+id/imageView_status_icon"
		tools:text="Thunderstorm" />

	<TextView
		android:id="@+id/textView_status_description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:textColor="@color/yellow"
		app:layout_constraintBottom_toBottomOf="@+id/imageView_status_icon"
		app:layout_constraintStart_toStartOf="@+id/textView_status"
		app:layout_constraintTop_toBottomOf="@+id/textView_status"
		tools:text="heavy shower rain and drizzle" />

	<androidx.constraintlayout.widget.Barrier
		android:id="@+id/barrier_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:barrierDirection="end"
		app:barrierMargin="8dp"
		app:constraint_referenced_ids="textView_status_description, textView_status" />

	<TextView
		android:id="@+id/textView_temperature_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:text="@string/feels_like_label"
		android:textColor="@color/grey"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/textView_feels_like_temperature_label"
		app:layout_constraintEnd_toStartOf="@+id/textView_feels_like_temperature"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintStart_toStartOf="@+id/barrier_status"
		app:layout_constraintTop_toTopOf="@+id/textView_status" />

	<TextView
		android:id="@+id/textView_feels_like_temperature_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="8dp"
		android:text="@string/temperature_label"
		android:textColor="@color/grey"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="@+id/textView_status_description"
		app:layout_constraintEnd_toStartOf="@+id/textView_temperature"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintStart_toStartOf="@id/barrier_status"
		app:layout_constraintTop_toBottomOf="@+id/textView_temperature_label" />

	<TextView
		android:id="@+id/textView_feels_like_temperature"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:textColor="@color/yellow"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/textView_temperature_label"
		app:layout_constraintTop_toTopOf="@+id/textView_temperature_label"
		tools:text="24.9" />

	<TextView
		android:id="@+id/textView_temperature"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:textColor="@color/yellow"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/textView_feels_like_temperature_label"
		app:layout_constraintTop_toTopOf="@+id/textView_feels_like_temperature_label"
		tools:text="24.7" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_vertical_scrim"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.09" />

	<com.google.android.material.progressindicator.CircularProgressIndicator
		android:id="@+id/progress_indicator"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"
		app:indicatorColor="@color/orange_red"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:progress="50"
		tools:visibility="visible"

		/>

</androidx.constraintlayout.widget.ConstraintLayout>
